[package]
name = "cetkaik_calculate_hand"
version = "0.3.0"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2018"
description = "Ported https://www.npmjs.com/package/cerke_hands_and_score into Rust. See https://sites.google.com/view/cet2kaik/the-standardized-rule-in-english for more context."
license = "MIT"
exclude = [
    "renovate.json"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"], default-features = false }
serde_json = "1.0.62"
cetkaik_core = "0.3.4"
multiset = "0.0.5"
hashbrown = "0.11.2"